# adaptive-ui-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_agent.py
agent/: __init__.py  ppo.py  trainer.py
configs/: default.yaml  initial_curriculum.yaml  llm_config.example.yaml  llm_config.yaml  overnight.yaml
controller/: meta_controller.py
docs/: GUIA_COMPLETO.md
env/: __init__.py  app_sandbox.py  dataset_generator.py  extended_sandbox.py  sandbox_env.py  universal_env.py
interaction/: __init__.py  chat_interface.py  input_controller.py  screen_capture.py  visualizer.py
planner/: __init__.py  goal_dsl.py  integration.py  llm_planner.py  llm_provider.py  reward_generator.py  visual_detectors.py
scripts/: __init__.py  auto_train.py  demo.py  run_training.py
skills/: __init__.py  cursor_skills.py  desktop_skills.py  keyboard_skills.py  navigation_skills.py
tests/: test_controller.py  test_curriculum.py  test_env.py  test_ppo.py  test_skills.py  test_universal_env.py  test_vision.py  test_vqvae.py
training/: auto_curriculum.py  curriculum_manager.py
training/curriculum/: desktop_basics.yaml
vision/: __init__.py  ocr_backend.py  state_extractor.py  train_vqvae.py  universal_detector.py  vqvae.py  yolo_backend.py
